--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,11 @@ services:
         restart: always
         env_file:
             - .env
-        # environment:
-        #     POSTGRES_USER: ${POSTGRES_USERNAME}
-        #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-        #     POSTGRES_DB: ${POSTGRES_DB}
-            # POSTGRES_DB_NAME: ${POSTGRES_DB_NAME}
+        environment:
+            POSTGRES_USER: ${POSTGRES_USERNAME}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+            POSTGRES_DB_NAME: ${POSTGRES_DB_NAME}
         volumes:
             - techeerism-db:/techeerism-db/postgres-data
         ports:
